--- a/QuickThrowGrenades.csproj
+++ b/QuickThrowGrenades.csproj
@@ -17,59 +17,74 @@
   </ItemGroup>
 
 	<ItemGroup>
+		<Reference Include="0Harmony">
+			<HintPath>..\..\BepinEx\Core\0Harmony.dll</HintPath>
+		</Reference>
+		<Reference Include="Spt.Common">
+			<HintPath>..\..\BepinEx\Plugins\spt\SPT-Common.dll</HintPath>
+		</Reference>
+		<Reference Include="SPT.Reflection">
+			<HintPath>..\..\BepinEx\Plugins\spt\SPT-Reflection.dll</HintPath>
+		</Reference>
+		<Reference Include="AnimationSystem.Types">
+			<HintPath>..\..\EscapeFromTarkov_data\managed\AnimationSystem.Types.dll</HintPath>
+		</Reference>
 		<Reference Include="Assembly-CSharp">
-			<HintPath>$(SolutionDir)deps\Assembly-CSharp.dll</HintPath>
+			<HintPath>..\..\BepInEx\DumpedAssemblies\EscapeFromTarkov\Assembly-CSharp.dll</HintPath>
+		</Reference>
+		<Reference Include="BepInEx">
+			<HintPath>..\..\BepinEx\Core\BepInEx.dll</HintPath>
+		</Reference>
+		<Reference Include="bsg.console.core">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\bsg.console.core.dll</HintPath>
 		</Reference>
 		<Reference Include="Comfort">
-			<HintPath>$(SolutionDir)deps\Comfort.dll</HintPath>
-		</Reference>
-		<Reference Include="UnityEngine.CoreModule">
-			<HintPath>$(SolutionDir)deps\UnityEngine.CoreModule.dll</HintPath>
-		</Reference>
-		<Reference Include="UnityEngine">
-			<HintPath>$(SolutionDir)deps\UnityEngine.dll</HintPath>
-		</Reference>
-		<Reference Include="UnityEngine.InputLegacyModule">
-			<HintPath>$(SolutionDir)deps\UnityEngine.InputLegacyModule.dll</HintPath>
-		</Reference>
-		<Reference Include="UnityEngine.PhysicsModule">
-			<HintPath>$(SolutionDir)deps\UnityEngine.PhysicsModule.dll</HintPath>
-		</Reference>
-		<Reference Include="UnityEngine.UI">
-			<HintPath>$(SolutionDir)deps\UnityEngine.UI.dll</HintPath>
-		</Reference>
-		<Reference Include="Unity.TextMeshPro">
-			<HintPath>$(SolutionDir)deps\Unity.TextMeshPro.dll</HintPath>
-		</Reference>
-		<Reference Include="SPT.reflection">
-			<HintPath>$(SolutionDir)deps\SPT-Reflection.dll</HintPath>
-		</Reference>
-		<Reference Include="Sirenix.Serialization">
-			<HintPath>$(SolutionDir)deps\Sirenix.Serialization.dll</HintPath>
-		</Reference>
-		<Reference Include="0Harmony">
-			<HintPath>$(SolutionDir)deps\0Harmony.dll</HintPath>
-		</Reference>
-		<Reference Include="BsgConsoleCore">
-			<HintPath>$(SolutionDir)deps\bsg.console.core.dll</HintPath>
-		</Reference>
-		<Reference Include="BepinEx">
-			<HintPath>$(SolutionDir)deps\BepInEx.dll</HintPath>
-		</Reference>
-		<Reference Include="ConfigurationManager">
-			<HintPath>$(SolutionDir)deps\ConfigurationManager.dll</HintPath>
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\Comfort.dll</HintPath>
 		</Reference>
 		<Reference Include="ItemComponent.Types">
-			<HintPath>$(SolutionDir)deps\ItemComponent.Types.dll</HintPath>
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\ItemComponent.Types.dll</HintPath>
 		</Reference>
-		<Reference Include="ItemTemplate.Types">
-			<HintPath>$(SolutionDir)deps\ItemTemplate.Types.dll</HintPath>
+		<Reference Include="Newtonsoft.Json">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\Newtonsoft.Json.dll</HintPath>
+		</Reference>
+		<Reference Include="Sirenix.Serialization">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\Sirenix.Serialization.dll</HintPath>
+		</Reference>
+		<Reference Include="Unity.TextMeshPro">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\Unity.TextMeshPro.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\UnityEngine.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.AnimationModule">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\UnityEngine.AnimationModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.InputLegacyModule">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\UnityEngine.InputLegacyModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.AssetBundleModule">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\UnityEngine.AssetBundleModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.AudioModule">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\UnityEngine.AudioModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.CoreModule">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\UnityEngine.CoreModule.dll</HintPath>
 		</Reference>
 		<Reference Include="UnityEngine.IMGUIModule">
-			<HintPath>$(SolutionDir)deps\UnityEngine.IMGUIModule.dll</HintPath>
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\UnityEngine.IMGUIModule.dll</HintPath>
 		</Reference>
 		<Reference Include="UnityEngine.TextRenderingModule">
-			<HintPath>$(SolutionDir)deps\UnityEngine.TextRenderingModule.dll</HintPath>
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\UnityEngine.TextRenderingModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.UI">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\UnityEngine.UI.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.AIModule">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\UnityEngine.AIModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.AnimationModule">
+			<HintPath>..\..\EscapeFromTarkov_Data\managed\UnityEngine.AnimationModule.dll</HintPath>
 		</Reference>
 	</ItemGroup>
   
@@ -80,7 +95,7 @@
   </ItemGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="copy &quot;$(TargetPath)&quot; &quot;G:\3.9.0 - Dev\BepInEx\plugins\$(TargetName).dll&quot;&#xD;&#xA;if $(ConfigurationName) == Debug (&#xD;&#xA;    copy &quot;$(ProjectDir)$(OutDir)$(TargetName).pdb&quot; &quot;G:\3.9.0 - Dev\BepInEx\plugins\$(TargetName).pdb&quot;&#xD;&#xA;) else (&#xD;&#xA;    del &quot;G:\3.9.0 - Dev\BepInEx\plugins\$(TargetName).pdb&quot;&#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;del &quot;G:\3.9.0 - Dev\BepInEx\config\com.dirtbikercj.QuickThrowGrenades.cfg&quot;" />
+		<Exec Command="copy &quot;$(TargetPath)&quot; &quot;..\..\BepInEx\plugins\$(TargetName).dll&quot;&#xD;&#xA;if $(ConfigurationName) == Debug (&#xD;&#xA;    copy &quot;$(ProjectDir)$(OutDir)$(TargetName).pdb&quot; &quot;..\..\BepInEx\plugins\$(TargetName).pdb&quot;&#xD;&#xA;) else (&#xD;&#xA;    del &quot;..\..\BepInEx\plugins\$(TargetName).pdb&quot;&#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;del &quot;..\..\BepInEx\config\com.dirtbikercj.template.cfg&quot;" />
 	</Target>
 
 </Project>
